# aws-auth-proto

./: Cargo.toml  rustfmt.toml
src/: main.rs
